# aspect-based-reputation-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/sample/: reviews_sample.csv
docs/: metadata.yaml  paper.md  project_status.md  references.bib  reproducibility_checklist.md
notebooks/: 01_exploracion_datos.ipynb  02_baseline_clasico.ipynb  03_beto_finetuning.ipynb  04_llm_prompting.ipynb  05_comparativa_resultados.ipynb
scripts/: eval_all.py  train_beto.py  train_svm.py
src/: __init__.py
src/aspects/: __init__.py  extractor.py
src/classical/: __init__.py  lexicon.py  svm_classifier.py
src/data/: __init__.py  builder.py  loader.py  preprocessing.py
src/evaluation/: __init__.py  metrics.py
src/llm/: __init__.py  prompting.py
src/reputation/: __init__.py  aggregator.py
src/transformers_models/: __init__.py  beto.py
tests/: test_cli_and_docs.py  test_core.py  test_data_validation.py  test_smoke.py
