[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aspect-based-reputation-analysis"
version = "0.1.0"
description = "Análisis de Reputación Basado en Aspectos sobre Reseñas de Productos en Español"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Gómez Vázquez Juan Pablo" },
    { name = "Martínez Miranda Juan Carlos" },
    { name = "Salgado Miranda Jorge" },
]
keywords = ["nlp", "absa", "sentiment-analysis", "spanish", "reputation", "beto"]
dependencies = [
    "spacy>=3.7.0,<4.0.0",
    "nltk>=3.8.1",
    "sentence-transformers>=2.5.0",
    "torch>=2.1.0",
    "transformers>=4.38.0",
    "datasets>=2.17.0",
    "accelerate>=0.27.0",
    "evaluate>=0.4.1",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "pysentimiento>=0.7.4",
    "anthropic>=0.25.0",
    "openai>=1.14.0",
    "tenacity>=8.2.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pyarrow>=15.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.29.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: Spanish",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = [
    "src",
    "src.data",
    "src.aspects",
    "src.classical",
    "src.transformers_models",
    "src.llm",
    "src.reputation",
    "src.evaluation",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
